# tutor-celery-worker-patch

./: .hatch_build.py  README.md  pyproject.toml
tutorceleryworkerpatch/: plugin.py
