[project]
name = "tutor-celery-worker-patch"
license = { text = "AGPL-3.0-only" }
requires-python = ">= 3.9"
authors = [
  {name = "Alex"},
]
description = "A Tutor plugin to customize Celery worker parameters for LMS and CMS"
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "tutor>=19.0.0,<21.0.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "tutor[dev]>=19.0.0,<21.0.0",
]

[project.entry-points."tutor.plugin.v1"]
celery-worker-patch = "tutorceleryworkerpatch.plugin"

[tool.hatch.metadata.hooks.custom]
path = ".hatch_build.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
strict-naming = false
include = ["/tutorceleryworkerpatch", ".hatch_build.py"]
exclude = ["tests*"]

[tool.hatch.build.targets.wheel]
packages = ["tutorceleryworkerpatch"]
